[package]
name = "wamp_async"
description = "An asynchronous WAMP implementation"
version = "0.0.1"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

readme = "README.md"
documentation = "https://docs.rs/wamp_async"
repository  = "https://gitlab.com/elast0ny/wamp_async-rs"
keywords = ["wamp", "async", "client"]
categories = ["network-programming", "web-programming", "asynchronous"]

[dependencies]
log = "0.4"
env_logger = "0.7"
quick-error = "1.2"
url = "2.1"
async-trait = "0.1"
tokio = { version = "0.2", features = ["net", "io-util", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.14"
rand = "0.3"
tokio-tungstenite = {version = "0", features = ["tls"]}
native-tls = "0.2"
tokio-tls = "0.3"
futures = "0"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core"] }
lazy_static = "1"
