[package]
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
description = "An asynchronous WAMP implementation"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "wamp_async"
version = "0.2.0"

categories = ["network-programming", "web-programming", "asynchronous"]
documentation = "https://docs.rs/wamp_async"
keywords = ["wamp", "async", "client"]
readme = "README.md"
repository = "https://github.com/elast0ny/wamp_async"

[dependencies]
async-trait = "0.1"
env_logger = "0.7"
futures = "0"
log = "0.4"
native-tls = "0.2"
quick-error = "1.2"
rand = "0.3"
rmp-serde = "0.14"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "0.3", features = ["full"]}
tokio-native-tls = "0.2"
tokio-tungstenite = {version = "0.12", features = ["tls"]}
url = "2.1"

[dev-dependencies]
lazy_static = "1"
tokio = {version = "0.3", features = ["full"]}
