[package]
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
description = "An asynchronous WAMP implementation"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "wamp_async"
version = "0.3.2-alpha.0"

categories = ["network-programming", "web-programming", "asynchronous"]
documentation = "https://docs.rs/wamp_async"
keywords = ["wamp", "async", "client"]
readme = "README.md"
repository = "https://github.com/elast0ny/wamp_async"

[dependencies]
async-trait = "0.1"
futures = "0.3"
hex = "0.4.3"
log = "0.4"
nacl = "0.5.3"
native-tls = "0.2"
quick-error = "2"
rand = "0.8"
rmp-serde = "0.15"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1"
strum = { version = "0.20", features = ["derive"] }
tokio = { version = "1", features = ["net", "sync", "io-util", "macros"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.14", features = ["native-tls"] }
url = "2"

[dev-dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8"
